--- a/src/main/resources/com/example/aerolineascanary7islands/flightsTickets-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/flightsTickets-view.fxml
@@ -1,22 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.TicketsVuelosController">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: #44a7e2;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.TicketsVuelosController">
    <children>
-      <ScrollPane layoutX="5.0" layoutY="60.0" prefHeight="580.0" prefWidth="989.0">
+      <ImageView fitHeight="421.0" fitWidth="1008.0" layoutX="-4.0" layoutY="286.0">
+         <image>
+            <Image url="@../../../Imagenes/avionEnPista.jpg" />
+         </image>
+      </ImageView>
+      <ScrollPane layoutX="5.0" layoutY="60.0" prefHeight="295.0" prefWidth="990.0">
          <content>
             <VBox fx:id="dynamicContainer" alignment="CENTER" prefHeight="22.0" prefWidth="988.0" spacing="20.0" />
          </content>
       </ScrollPane>
-      <Label layoutX="358.0" layoutY="7.0" text="Vuelos disponible">
+      <Label fx:id="labelTitle" layoutX="352.0" text="Vuelos disponible">
          <font>
-            <Font name="Berlin Sans FB" size="40.0" />
+            <Font name="Impact" size="40.0" />
          </font>
       </Label>
+      <Pane layoutX="15.0" layoutY="648.0" opacity="0.6" prefHeight="45.0" prefWidth="105.0" style="-fx-background-color: white; -fx-border-color: grey;" />
+      <Label layoutX="60.0" layoutY="654.0" prefHeight="34.0" prefWidth="69.0" text="Salir">
+         <font>
+            <Font name="Impact" size="26.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="45.0" fitWidth="49.0" layoutX="15.0" layoutY="649.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+         <image>
+            <Image url="@../../../Iconos/flechaRoja.png" />
+         </image>
+      </ImageView>
+      <Pane layoutX="14.0" layoutY="647.0" onMouseClicked="#salir" prefHeight="46.0" prefWidth="106.0" />
+      <Pane fx:id="paneAsiento" opacity="0.66" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: black;">
+         <children>
+            <Pane layoutX="351.0" layoutY="120.0" prefHeight="159.0" prefWidth="299.0" style="-fx-background-color: white;">
+               <children>
+                  <HBox alignment="CENTER" layoutX="50.0" layoutY="65.0" prefHeight="30.0" prefWidth="200.0" spacing="20.0">
+                     <children>
+                        <RadioButton mnemonicParsing="false" selected="true" text="Turista">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="tipoVuelo" />
+                           </toggleGroup>
+                           <font>
+                              <Font name="Calibri" size="16.0" />
+                           </font>
+                        </RadioButton>
+                        <RadioButton mnemonicParsing="false" text="Premium" toggleGroup="$tipoVuelo">
+                           <font>
+                              <Font name="Calibri" size="16.0" />
+                           </font>
+                        </RadioButton>
+                     </children>
+                  </HBox>
+                  <Label layoutX="69.0" layoutY="14.0" text="Tipo de asiento">
+                     <font>
+                        <Font name="Impact" size="26.0" />
+                     </font>
+                  </Label>
+                  <HBox alignment="CENTER" layoutX="6.0" layoutY="130.0" prefHeight="30.0" prefWidth="287.0" spacing="80.0">
+                     <children>
+                        <Label onMouseClicked="#cancelar" prefHeight="24.0" prefWidth="144.0" text="Cancelar">
+                           <font>
+                              <Font name="Impact" size="20.0" />
+                           </font>
+                        </Label>
+                        <Label onMouseClicked="#confirmar" prefHeight="24.0" prefWidth="111.0" text="Confirmar">
+                           <font>
+                              <Font name="Impact" size="20.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+               </children>
+            </Pane>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
