--- a/src/main/resources/com/example/aerolineascanary7islands/tickets-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/tickets-view.fxml
@@ -14,28 +14,29 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="700.0" minWidth="1000.0" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: sky;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.TicketsController">
+<AnchorPane minHeight="700.0" minWidth="1000.0" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: #1dc8fc;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.TicketsController">
    <children>
-      <Label layoutX="32.0" layoutY="647.0" onMouseClicked="#salir" text="Salir">
-         <font>
-            <Font name="Calibri" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="428.0" layoutY="647.0" onMouseClicked="#reservar" text="Reservar vuelo">
-         <font>
-            <Font name="Calibri" size="24.0" />
-         </font>
-      </Label>
-      <StackPane fx:id="carrousel" layoutY="123.0" prefHeight="498.0" prefWidth="1000.0">
+      <ImageView fitHeight="197.0" fitWidth="1013.0" layoutX="-8.0" layoutY="503.0">
+         <image>
+            <Image url="@../../../Imagenes/blue-sky-with-white-clouds-background-border-of-clouds-simple-cartoon-design-flat-style-illustration-free-vector-3358013314.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="79.0" fitWidth="78.0" layoutX="29.0" layoutY="17.0">
+         <image>
+            <Image url="@../../../Imagenes/imagen-de-usuario-con-fondo-negro.png" />
+         </image>
+      </ImageView>
+      <Pane layoutX="21.0" layoutY="20.0" onMouseClicked="#perfilClick" prefHeight="79.0" prefWidth="96.0" />
+      <StackPane fx:id="carrousel" layoutY="123.0" prefHeight="455.0" prefWidth="1000.0">
          <children>
             <Pane fx:id="pane2" prefHeight="621.0" prefWidth="899.0">
                <children>
-                  <ImageView fx:id="imageView2" fitHeight="498.0" fitWidth="1000.0">
+                  <ImageView fx:id="imageView2" fitHeight="455.0" fitWidth="1000.0">
                      <image>
                         <Image url="@../../../Imagenes/Tenerife.jpg" />
                      </image>
                   </ImageView>
-                  <Pane opacity="0.2" prefHeight="497.0" prefWidth="1000.0" style="-fx-background-color: black;" />
+                  <Pane opacity="0.2" prefHeight="455.0" prefWidth="1000.0" style="-fx-background-color: black;" />
                   <Label fx:id="tenerifeLabel" layoutX="14.0" text="Tenerife" textFill="WHITE">
                      <font>
                         <Font name="Impact" size="96.0" />
@@ -60,12 +61,12 @@
             </Pane>
             <Pane fx:id="pane1" prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <ImageView fx:id="imageView1" fitHeight="497.0" fitWidth="1000.0">
+                  <ImageView fx:id="imageView1" fitHeight="455.0" fitWidth="1000.0">
                      <image>
                         <Image url="@../../../Imagenes/GranCanaria.jpg" />
                      </image>
                   </ImageView>
-                  <Pane opacity="0.2" prefHeight="498.0" prefWidth="1000.0" style="-fx-background-color: black;" />
+                  <Pane opacity="0.2" prefHeight="455.0" prefWidth="1000.0" style="-fx-background-color: black;" />
                   <Label fx:id="granCanariaLabel" layoutX="14.0" text="Gran Canaria" textFill="WHITE">
                      <font>
                         <Font name="Impact" size="96.0" />
@@ -89,11 +90,6 @@
                </children>
             </Pane>
          </children></StackPane>
-      <ImageView fitHeight="73.0" fitWidth="78.0" layoutX="14.0" layoutY="20.0" onMouseClicked="#perfilClick">
-         <image>
-            <Image url="@../../../Imagenes/usuario.png" />
-         </image>
-      </ImageView>
       <Label fx:id="labelTitle" layoutX="418.0" layoutY="14.0" prefHeight="79.0" prefWidth="172.0" text="Viajes">
          <font>
             <Font name="Impact" size="64.0" />
@@ -115,8 +111,8 @@
             </LinearGradient>
          </textFill>
       </Label>
-      <Pane fx:id="paneBg" layoutY="-2.0" opacity="0.3" prefHeight="710.0" prefWidth="1000.0" style="-fx-background-color: black;" />
-      <Pane fx:id="paneSelection" prefHeight="140.0" prefWidth="1000.0" style="-fx-background-color: white;">
+      <Pane fx:id="paneBg" layoutY="-2.0" opacity="0.3" prefHeight="710.0" prefWidth="1000.0" style="-fx-background-color: black;" visible="false" />
+      <Pane fx:id="paneSelection" layoutY="-2.0" prefHeight="142.0" prefWidth="1000.0" style="-fx-background-color: white;" visible="false">
          <children>
             <Label layoutX="448.0" layoutY="107.0" onMouseClicked="#buscarVuelo" text="Buscar Vuelo">
                <font>
@@ -158,5 +154,56 @@
             </Label>
          </children>
       </Pane>
+      <Pane layoutX="15.0" layoutY="637.0" opacity="0.6" prefHeight="45.0" prefWidth="105.0" style="-fx-background-color: white; -fx-border-color: grey;" />
+      <Label layoutX="60.0" layoutY="643.0" prefHeight="34.0" prefWidth="69.0" text="Salir">
+         <font>
+            <Font name="Impact" size="26.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.1070987656712532" green="0.025925925001502037" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill>
+      </Label>
+      <ImageView fitHeight="45.0" fitWidth="49.0" layoutX="15.0" layoutY="638.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+         <image>
+            <Image url="@../../../Iconos/flechaRoja.png" />
+         </image>
+      </ImageView>
+      <Pane layoutX="14.0" layoutY="636.0" onMouseClicked="#salir" prefHeight="46.0" prefWidth="106.0" />
+      <Pane layoutX="402.0" layoutY="637.0" opacity="0.6" prefHeight="46.0" prefWidth="196.0" style="-fx-background-color: white; -fx-border-color: grey;" />
+      <Label layoutX="422.0" layoutY="643.0" text="Reservar vuelo">
+         <font>
+            <Font name="Impact" size="26.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color green="0.16862745583057404" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill>
+      </Label>
+      <Pane layoutX="402.0" layoutY="636.0" onMouseClicked="#reservar" prefHeight="46.0" prefWidth="196.0" />
    </children>
 </AnchorPane>
