--- a/src/main/resources/com/example/aerolineascanary7islands/perfil-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/perfil-view.fxml
@@ -8,22 +8,25 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="434.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aerolineascanary7islands.controllers.PerfilController">
    <children>
-      <ImageView fitHeight="505.0" fitWidth="684.0">
+      <ImageView fitHeight="700.0" fitWidth="1000.0">
          <image>
             <Image url="@../../../Imagenes/ventanas.png" />
          </image>
       </ImageView>
-      <Pane layoutX="73.0" layoutY="81.0" opacity="0.6" prefHeight="326.0" prefWidth="536.0" style="-fx-background-color: white; -fx-border-color: grey;" />
+      <Pane layoutX="232.0" layoutY="176.0" opacity="0.6" prefHeight="326.0" prefWidth="536.0" style="-fx-background-color: white; -fx-border-color: grey;" />
       <Label fx:id="labelTitle" layoutX="159.0" layoutY="14.0">
          <font>
             <Font name="Impact" size="41.0" />
          </font>
       </Label>
-      <VBox alignment="CENTER" layoutX="206.0" layoutY="89.0" prefHeight="196.0" prefWidth="100.0" spacing="15.0">
+      <VBox alignment="CENTER" layoutX="309.0" layoutY="177.0" prefHeight="196.0" prefWidth="100.0" spacing="15.0">
          <children>
             <Label text="Nombre:">
                <font>
@@ -47,31 +50,31 @@
             </Label>
          </children>
       </VBox>
-      <VBox alignment="CENTER" layoutX="313.0" layoutY="87.0" prefHeight="200.0" prefWidth="174.0" spacing="15.0">
+      <VBox alignment="CENTER" layoutX="555.0" layoutY="177.0" prefHeight="200.0" prefWidth="174.0" spacing="15.0">
          <children>
-            <Label fx:id="labelNombre" prefHeight="26.0" prefWidth="72.0" text="Nombre">
+            <Label fx:id="labelNombre" prefHeight="26.0" prefWidth="86.0" text="Nombre">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
             </Label>
-            <Label fx:id="labelContraseña" prefHeight="26.0" prefWidth="75.0" text="Nombre">
+            <Label fx:id="labelContraseña" prefHeight="26.0" prefWidth="86.0" text="Nombre">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
             </Label>
-            <Label fx:id="labelMail" prefHeight="26.0" prefWidth="78.0" text="Nombre">
+            <Label fx:id="labelMail" prefHeight="26.0" prefWidth="86.0" text="Nombre">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
             </Label>
-            <Label fx:id="labelTelefono" prefHeight="27.0" prefWidth="150.0" text="Nombre">
+            <Label fx:id="labelTelefono" prefHeight="27.0" prefWidth="86.0" text="Nombre">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
             </Label>
          </children>
       </VBox>
-      <Pane fx:id="pane2" layoutX="164.0" layoutY="287.0" prefHeight="101.0" prefWidth="358.0">
+      <Pane fx:id="pane2" layoutX="321.0" layoutY="364.0" prefHeight="101.0" prefWidth="358.0">
          <children>
             <ComboBox fx:id="comboBoxFields" layoutX="95.0" layoutY="2.0" prefWidth="150.0" />
             <Label fx:id="labelNew" layoutX="14.0" layoutY="39.0" prefHeight="27.0" prefWidth="174.0" text="Nuevo dato:">
@@ -84,44 +87,149 @@
                <font>
                   <Font name="Impact" size="26.0" />
                </font>
+               <textFill>
+                  <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+                     <stops>
+                        <Stop>
+                           <color>
+                              <Color red="1.0" />
+                           </color>
+                        </Stop>
+                        <Stop offset="0.8422818791946307">
+                           <color>
+                              <Color red="0.1184210553765297" blue="0.7105262875556946" />
+                           </color>
+                        </Stop>
+                        <Stop offset="1.0">
+                           <color>
+                              <Color red="0.1184210553765297" blue="0.7105262875556946" />
+                           </color>
+                        </Stop>
+                     </stops>
+                  </LinearGradient>
+               </textFill>
             </Label>
          </children>
       </Pane>
-      <Pane layoutX="15.0" layoutY="446.0" opacity="0.6" prefHeight="45.0" prefWidth="105.0" style="-fx-background-color: white; -fx-border-color: grey;" />
-      <Label layoutX="60.0" layoutY="452.0" prefHeight="34.0" prefWidth="69.0" text="Salir">
+      <Pane layoutX="25.0" layoutY="633.0" opacity="0.6" prefHeight="45.0" prefWidth="105.0" style="-fx-background-color: white; -fx-border-color: grey;" />
+      <Label layoutX="70.0" layoutY="639.0" prefHeight="34.0" prefWidth="69.0" text="Salir">
          <font>
             <Font name="Impact" size="26.0" />
          </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.8422818791946308">
+                     <color>
+                        <Color red="0.1184210553765297" blue="0.7105262875556946" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.1184210553765297" blue="0.7105262875556946" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill>
       </Label>
-      <ImageView fitHeight="45.0" fitWidth="49.0" layoutX="15.0" layoutY="447.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+      <ImageView fitHeight="45.0" fitWidth="49.0" layoutX="25.0" layoutY="634.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
          <image>
             <Image url="@../../../Iconos/flechaRoja.png" />
          </image>
       </ImageView>
-      <Pane layoutX="14.0" layoutY="445.0" onMouseClicked="#salir" prefHeight="46.0" prefWidth="106.0" />
-      <Pane layoutX="502.0" layoutY="445.0" opacity="0.6" prefHeight="46.0" prefWidth="167.0" style="-fx-background-color: white; -fx-border-color: grey;" />
-      <ImageView fitHeight="45.0" fitWidth="49.0" layoutX="625.0" layoutY="446.0" pickOnBounds="true" preserveRatio="true">
+      <Pane layoutX="25.0" layoutY="633.0" onMouseClicked="#salir" prefHeight="46.0" prefWidth="106.0" />
+      <Pane layoutX="808.0" layoutY="633.0" opacity="0.6" prefHeight="46.0" prefWidth="167.0" style="-fx-background-color: white; -fx-border-color: grey;" />
+      <ImageView fitHeight="45.0" fitWidth="49.0" layoutX="931.0" layoutY="634.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../Iconos/flechaRoja.png" />
          </image>
       </ImageView>
-      <Label layoutX="509.0" layoutY="451.0" prefHeight="34.0" prefWidth="115.0" text="Mis vuelos">
+      <Label layoutX="815.0" layoutY="639.0" prefHeight="34.0" prefWidth="115.0" text="Mis vuelos">
          <font>
             <Font name="Impact" size="26.0" />
          </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.8422818791946308">
+                     <color>
+                        <Color red="0.1184210553765297" blue="0.7105262875556946" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.1184210553765297" blue="0.7105262875556946" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill>
       </Label>
-      <Pane layoutX="502.0" layoutY="445.0" onMouseClicked="#verVuelos" prefHeight="46.0" prefWidth="167.0" />
-      <Pane layoutX="248.0" layoutY="446.0" opacity="0.6" prefHeight="46.0" prefWidth="186.0" style="-fx-background-color: white; -fx-border-color: grey;" />
-      <Label layoutX="255.0" layoutY="452.0" prefHeight="34.0" prefWidth="174.0" text="Actualizar datos">
+      <Pane layoutX="808.0" layoutY="633.0" onMouseClicked="#verVuelos" prefHeight="46.0" prefWidth="167.0" />
+      <Pane layoutX="395.0" layoutY="634.0" opacity="0.6" prefHeight="46.0" prefWidth="186.0" style="-fx-background-color: white; -fx-border-color: grey;" />
+      <Label layoutX="402.0" layoutY="640.0" prefHeight="34.0" prefWidth="174.0" text="Actualizar datos">
          <font>
             <Font name="Impact" size="26.0" />
          </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.8422818791946308">
+                     <color>
+                        <Color red="0.1184210553765297" blue="0.7105262875556946" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.1184210553765297" blue="0.7105262875556946" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill>
       </Label>
-      <Pane layoutX="245.0" layoutY="446.0" onMouseClicked="#actualizar" prefHeight="46.0" prefWidth="193.0" />
-      <Label fx:id="loginTitle" layoutX="56.0" text="Informacion personal">
+      <Pane layoutX="393.0" layoutY="634.0" onMouseClicked="#actualizar" prefHeight="46.0" prefWidth="193.0" />
+      <Label fx:id="loginTitle" layoutX="215.0" layoutY="40.0" text="Informacion personal">
          <font>
             <Font name="Impact" size="64.0" />
          </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.8422818791946307">
+                     <color>
+                        <Color red="0.1184210553765297" blue="0.7105262875556946" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.1184210553765297" blue="0.7105262875556946" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill>
       </Label>
    </children>
 </AnchorPane>
