--- a/src/main/resources/com/example/aerolineascanary7islands/perfil-view.fxml
+++ b/src/main/resources/com/example/aerolineascanary7islands/perfil-view.fxml
@@ -52,22 +52,22 @@
       </VBox>
       <VBox alignment="CENTER" layoutX="555.0" layoutY="177.0" prefHeight="200.0" prefWidth="174.0" spacing="15.0">
          <children>
-            <Label fx:id="labelNombre" prefHeight="26.0" prefWidth="86.0" text="Nombre">
+            <Label fx:id="labelNombre" alignment="CENTER" prefHeight="26.0" prefWidth="183.0" text="Nombre">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
             </Label>
-            <Label fx:id="labelContraseña" prefHeight="26.0" prefWidth="86.0" text="Nombre">
+            <Label fx:id="labelContraseña" alignment="CENTER" prefHeight="26.0" prefWidth="229.0" text="Nombre">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
             </Label>
-            <Label fx:id="labelMail" prefHeight="26.0" prefWidth="86.0" text="Nombre">
+            <Label fx:id="labelMail" alignment="CENTER" prefHeight="26.0" prefWidth="267.0" text="Nombre">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
             </Label>
-            <Label fx:id="labelTelefono" prefHeight="27.0" prefWidth="86.0" text="Nombre">
+            <Label fx:id="labelTelefono" alignment="CENTER" prefHeight="27.0" prefWidth="180.0" text="Nombre">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
